@startuml

title __ASSIGNMENT4's Class Diagram__\n

  namespace assignment4 {
    class assignment4.Board {
        {static} + EMPTY : char
        {static} - COLUMNS : int
        {static} - ROWS : int
        {static} + boardIsFull()
        {static} + firstEmptyRow()
        {static} + COLUMNS
        {static} + ROWS
        {static} + initializeBoard()
        {static} + isColumnFull()
        {static} + setCOLUMNS
        {static} + setROWS()
    }
  }
  

  namespace assignment4 {
    class assignment4.VirtualPlayerEasy {
        + MakeAChoise()
    }
  }
  

  namespace assignment4 {
    class assignment4.VirtualPlayerMedium {
        + MakeAChoise()
    }
  }
  

  namespace assignment4 {
    class assignment4.ConsoleUI {
        ~ terminalInput : Scanner
        + ComputerPlayerTurn()
        + ConsoleUI()
        + HumanPlayerTurn()
        + exit()
        + printBoard()
        + printMenu()
        + showWinner()
    }
  }
  

  namespace assignment4 {
    class assignment4.DebugProxy {
        - obj : Object
        {static} - writer : PrintWriter
        {static} + close_inner_file()
        + invoke()
        {static} + newInstance()
        - DebugProxy()
    }
  }
  

  namespace assignment4 {
    class assignment4.Game {
        {static} + EMPTY : char
        {static} + OPLAYER : char
        {static} + WIN : int
        {static} + XPLAYER : char
        {static} + board : char[][]
        {static} + computerplays : boolean
        {static} + currentPlayer : char
        {static} + gameover : boolean
        {static} + changePlayer()
        {static} + play()
        {static} + playerNum()
        {static} + winningDisk()
    }
  }
  

  namespace assignment4 {
    class assignment4.GameAspect {
    }
  }
  

  namespace assignment4 {
    enum GameModes {
      EASY
      MEDIUM
      STRONG
    }
  }
  

  namespace assignment4 {
    class assignment4.Main {
        {static} + main()
    }
  }
  

  namespace assignment4 {
    enum MenuOptions {
      Exit
      MultiPlayer
      SinglePlayer
    }
  }
  

  namespace assignment4 {
    interface assignment4.VirtualPlayer {
        {abstract} + MakeAChoise()
    }
  }
  

  namespace assignment4 {
    interface assignment4.UserInterface {
        {abstract} + computerPlayerTurn()
        {abstract} + humanPlayerTurn()
        {abstract} + exit()
        {abstract} + printBoard()
        {abstract} + printMenu()
        {abstract} + showWinner()
    }
  }
  

  namespace assignment4 {
    class assignment4.VirtualPlayerFactory {
        + getVirtialPlayer()
    }
  }
  

  assignment4.VirtualPlayerEasy .up.|> assignment4.VirtualPlayer
  assignment4.VirtualPlayerMedium .up.|> assignment4.VirtualPlayer
  assignment4.VirtualPlayer .up.|> assignment4.VirtualPlayerFactory
  assignment4.ConsoleUI .up.|> assignment4.UserInterface
  assignment4.DebugProxy .up.|> java.lang.reflect.InvocationHandler
  assignment4.MenuOptions .left.|> assignment4.ConsoleUI
  assignment4.GameModes .right.|> assignment4.VirtualPlayerFactory

  assignment4.Main --> assignment4.Game
  assignment4.Game --> assignment4.UserInterface
  assignment4.Game --> assignment4.Board
  assignment4.Game --> assignment4.VirtualPlayerFactory



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
